# wolf

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
docs/: notes.txt
include/: files.h  handle.h  iouring.h  list.h  mpsc_queue.h  ringbuffer.h  types.h  wolf.h
include/internal/: bounded_ring_buffer.h  files.h  handle.h  iouring.h  messages.h  mpsc_queue.h  ringbuffer.h  timers.h
src/: files.cpp  iouring.cpp  iouring.h  list.cpp  timers.cpp  wolf.cpp
tests/: CMakeLists.txt  higherstress.py  testaccept.py  testreadable.py  testwriteable.py  wolftest.cpp
